--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.cjs",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.cjs"
   },
   "type": "module",
   "keywords": [],
