--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.8.4",
+    "dompurify": "^3.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.5.0",
     "react-textarea-autosize": "^8.5.9",
     "zustand": "^5.0.3"
